# django-blog

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
apps/core/: admin.py  context_processors.py  middleware.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_project.py  0003_tech_remove_project_tech_stack_project_status_and_more.py  0004_alter_project_status.py  0005_alter_project_options.py  0006_alter_project_status.py
apps/posts/: admin.py  feeds.py  markdown.py  models.py  sitemaps.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_rename_posts_post.py  0003_alter_post_options.py  0004_alter_post_options.py  0005_alter_post_created_at_alter_post_updated_at.py  0006_tag_post_tags.py  0007_alter_tag_options.py  0008_post_views.py  0009_post_description.py
config/: config.py  env.py  settings.py  urls.py
hooks/: pre-push
scripts/: deploy.sh  install-hooks.sh  logs.sh
static/bootstrap/css/: bootstrap.min.css
static/bootstrap/js/: bootstrap.bundle.min.js
static/css/: style.css
static/js/: btnBack.js  btnCopy.js  loadGiscus.js  main.js
templates/: base.html
templates/core/: about.html  contact.html  index.html  now.html  projects.html  uses.html
templates/includes/: contact.html  now.html
templates/posts/: detail.html  list.html  post_detail.html  post_list.html  tag.html  tags.html
