[project]
name = "django-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "prs2rnn",email = "developer.prs2rnn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "django_blog", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
