[project]
name = "django-blog"
version = "0.1.1"
description = "A Django-powered personal website"
authors = [
    {name = "prs2rnn",email = "developer.prs2rnn@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14,<4.0"

dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "pygments (>=2.20.0,<3.0.0)",
    "bleach (>=6.4.0,<7.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "python-semantic-release (>=10.5.3,<11.0.0)",
    "ruff (>=0.15.15,<0.16.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
major_on_zero = false
allow_zero_version = true
